--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ft_containers)
 
 set(CMAKE_CXX_STANDARD 98)
 
-add_executable(ft_containers main.cpp List.hpp ListIterator.hpp ConstListIterator.hpp Stack.hpp Vector.hpp VectorIterator.hpp)
+add_executable(ft_containers main.cpp List.hpp ListIterator.hpp Stack.hpp Vector.hpp VectorIterator.hpp)
