vector insert, constructor list, bidirectional iterator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD 98)
 add_subdirectory(googletest)
 
 include_directories(googletest/googletest/include)
-add_executable(ft_containers main.cpp List.hpp Stack.hpp Vector.hpp Iterator.hpp Queue.hpp)
+add_executable(ft_containers main.cpp List.hpp Stack.hpp Vector.hpp Iterator.hpp Queue.hpp BidirectionalIterator.hpp)
 target_link_libraries(ft_containers gtest gtest_main)
